--- a/index.html
+++ b/index.html
@@ -133,19 +133,9 @@
 <body>
 
 <table class="infobox">
-  <tr>
-  <!-- 인포박스 첫 번째 행 -->
-  <td colspan="2" style="text-align: center; padding: 16px 10px 10px;">
-    <!-- 사진 -->
-    <img class="profile-img" 
-         src="https://i.ifh.cc/XyqDna.jpg" 
-         alt="Yu Jongkyeong" 
-         style="margin-bottom: 6px; border-radius: 10px;" />
-    <br>
-    <!-- 이름 (바로 아래 딱 붙음) -->
-    <div class="name-header" style="margin:0; padding:0; line-height:1.2;">
-      유종경(劉鍾景)
-    </div>
+  <tr><td colspan="2" style="text-align:center;padding:16px">
+    <img class="profile-img" src="증명사진.jpg" alt="유종경 프로필">
+    <div class="name-header">유종경(劉鍾景)</div>
   </td>
   </tr>
   <tr><th>출생</th><td>1990년 11월 20일 (<span id="age">35</span>세)<br></td></tr>
@@ -242,41 +232,47 @@
     <li>2015. <a href="https://ko.wikipedia.org/wiki/햄릿">햄릿</a> (Hamlet)</li>
   </ul>
 
-  <h2>수상</h2>
-  <ul>
-    <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
-    <li>2012년 9월 4일 민간인화재진압유공</li>
-    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려</li>
-  </ul>
+<h2>수상</h2>
+<ul>
+  <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
+  <li>2012년 9월 4일 민간인화재진압유공</li>
+  <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려</li>
+</ul>
 
-<div class="gallery" style="text-align:center; margin:40px 0;">
+<div class="gallery" style="text-align:center; margin:50px 0;">
   <div class="award-gallery">
 
     <!-- 2007년 한국국제기아대책기구 표창장 -->
-    <figure style="display:inline-block; margin:15px;">
-      <img src="https://i.ifh.cc/j9HJvF.jpg" 
+    <figure style="display:inline-block; margin:18px;">
+      <img src="표창장.jpg" 
            alt="2007년 한국국제기아대책기구 표창장" 
            width="300" loading="lazy"
-           style="border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.15); pointer-events:none;">
-      <figcaption>2007년 한국국제기아대책기구 표창장</figcaption>
+           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
+        2007년 한국국제기아대책기구 표창장
+      </figcaption>
     </figure>
 
     <!-- 2012년 민간인화재진압유공 -->
-    <figure style="display:inline-block; margin:15px;">
-      <img src="https://i.ifh.cc/Osrmj4.jpg" 
+    <figure style="display:inline-block; margin:18px;">
+      <img src="민간인화재진압유공.jpg" 
            alt="2012년 민간인화재진압유공" 
            width="300" loading="lazy"
-           style="border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.15); pointer-events:none;">
-      <figcaption>2012년 민간인화재진압유공</figcaption>
+           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
+        2012년 민간인 화재진압 유공
+      </figcaption>
     </figure>
 
     <!-- 2023년 국립어린이청소년도서관 -->
-    <figure style="display:inline-block; margin:15px;">
-      <img src="https://i.ifh.cc/LZJMRL.jpg" 
-           alt="2023년 국립어린이청소년도서관 독서 캠페인 한 줄 슬로건 장려상" 
+    <figure style="display:inline-block; margin:18px;">
+      <img src="국립어린이청소년도서관 수상.jpg" 
+           alt="2023년 국립어린이청소년도서관 독서 캠페인 장려상" 
            width="300" loading="lazy"
-           style="border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.15); pointer-events:none;">
-      <figcaption>2023년 국립어린이청소년도서관 독서 캠페인 한 줄 슬로건 장려상</figcaption>
+           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
+        2023년 국립어린이청소년도서관 독서 캠페인 한 줄 슬로건 장려상
+      </figcaption>
     </figure>
 
   </div>
