--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>유종경 - 위키백과</title>
+<title>유종경(劉鍾景)은 누구인가</title>
 <style>
   :root {
     --bg-color: #f9f9f9;
