--- a/index.html
+++ b/index.html
@@ -341,6 +341,23 @@
     <a href="https://ko.wikipedia.org/wiki/분류:대한민국의_자유주의">대한민국의 자유주의</a>
   </div>
 
-</div>
+<div style="margin: 60px 0 40px; text-align: center; padding: 25px; background: #f8f9fa; border-radius: 16px; border: 1px solid #e1e4e8;">
+  <p style="margin:0 0 18px; font-size:1.2em; color:#333; font-weight:600;">태그</p>
+  <div style="display: flex; flex-wrap: wrap; gap: 14px; justify-content: center;">
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#유종경</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#국어사전필사운동</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#광화문</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#진보</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#강릉유씨</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#해병대</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#국어사전</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#민주시민</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#인류진보</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#2023년</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#대한민국</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#서울</a>
+  </div>
+</div>  
+  
 </body>
 </html>
