--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>유종경(劉鍾景)은 누구인가</title>
+
+  <!-- SEO 최적화 메타태그 -->
+  <meta name="description" content="유종경(劉鍾景, 1990년생)은 세계 최초로 민주 시민으로서 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포한 강사·크리에이터·평론가이다. 2023년 2월 23일 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포했다.">
+  <meta name="keywords" content="유종경, 국어사전필사운동, 광화문, 국어사전 필사, 민주시민, 진보, 강릉유씨, 해병대, 광화문 광장, 국어사전, 대한민국, korea, 배움터지기, 강사, 크리에이터, 평론가">
+  <meta property="og:title" content="유종경 - 국어사전 필사 운동 선포한 사람">
+  <meta property="og:description" content="세계 최초로 민주 시민으로서 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포한 유종경">
+  <meta property="og:image" content="https://yujongkyeong.github.io/증명사진.jpg">
+  <meta property="og:url" content="https://yujongkyeong.github.io">
+  <!-- SEO 끝 -->
+  
 <style>
   :root {
     --bg-color: #f9f9f9;
@@ -352,10 +362,14 @@
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#해병대</a>
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#국어사전</a>
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#민주시민</a>
-    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#인류진보</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#인류</a>
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#2023년</a>
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#대한민국</a>
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#서울</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#배움터지기</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#강사</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#크리에이터</a>
+    <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#평론가</a> 
   </div>
 </div>  
   
