--- a/index.html
+++ b/index.html
@@ -321,6 +321,16 @@
   </li>
 </ul>
 
+  <!-- 외부 링크 -->
+  <h2>외부 링크</h2>
+  <ul class="external-links">
+    <li><a href="https://x.com/Yujongkyeong/">유종경 트위터</a></li>
+    <li><a href="http://instagram.com/yujongkyeong/">유종경 인스타그램</a></li>
+    <li><a href="https://medium.com/@yujongkyeong">유종경 미디엄</a></li>
+    <li><a href="https://blog.naver.com/yujongkyeong">유종경 블로그</a></li>
+    <li><a href="https://ho-hae.tistory.com/">유종경 티스토리</a></li>
+  </ul>
+
   <div class="categories">
     <strong>분류:</strong>
     <a href="https://ko.wikipedia.org/wiki/분류:1990년_출생">1990년 출생</a>
