--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>유종경(劉鍾景)은 누구인가</title>
 
   <!-- SEO 최적화 메타태그 -->
-  <meta name="description" content="유종경(劉鍾景, 1990년생)은 세계 최초로 민주 시민으로서 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포한 강사·크리에이터·평론가이다. 2023년 2월 23일 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포했다.">
-  <meta name="keywords" content="유종경, 국어사전필사운동, 광화문, 국어사전 필사, 민주시민, 진보, 강릉유씨, 해병대, 광화문 광장, 국어사전, 대한민국, korea, 배움터지기, 강사, 크리에이터, 평론가">
+  <meta name="description" content="유종경(劉鍾景, 1990년생)은 세계 최초로 민주 시민으로서 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포한 강사·크리에이터·평론가이다. 2023년 2월 23일 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포했다.">
+  <meta name="keywords" content="유종경, 국어사전필사운동, 광화문, 국어사전 필사, 민주시민, 진보, 강릉유씨, 해병대, 광화문 광장, 국어사전, 대한민국, korea, korean, 대표, 역사, 배움터지기, 강사, 크리에이터, 평론가">
   <meta property="og:title" content="유종경 - 국어사전 필사 운동 선포한 사람">
   <meta property="og:description" content="세계 최초로 민주 시민으로서 대한민국 광화문 광장에서 인류 진보를 위해 국어사전 필사 운동을 선포한 유종경">
   <meta property="og:image" content="https://yujongkyeong.github.io/증명사진.jpg">
@@ -326,7 +326,7 @@
   <ul class="external-links">
     <li><a href="https://x.com/Yujongkyeong/">유종경 트위터</a></li>
     <li><a href="http://instagram.com/yujongkyeong/">유종경 인스타그램</a></li>
-    <li><a href="https://medium.com/@yujongkyeong">유종경 미디엄</a></li>
+    <li><a href="https://medium.com/@yujongkyeong">유종경 미디움</a></li>
     <li><a href="https://blog.naver.com/yujongkyeong">유종경 블로그</a></li>
     <li><a href="https://ho-hae.tistory.com/">유종경 티스토리</a></li>
   </ul>
