--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   .media-container {
     text-align: center;
-    margin: 40px 0; /* 영상 위아래 여백 넉넉히 */
+    margin: 40px 0;
   }
 
   .profile-img {
@@ -150,7 +150,7 @@
   </tr>
   <tr><th>출생</th><td>1990년 11월 20일 (<span id="age">35</span>세)<br></td></tr>
   <tr><th>출생지</th><td>대한민국 <a href="https://ko.wikipedia.org/wiki/서울">서울</a></td></tr>
-  <tr><th>본관</th><td><a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a></td></tr>
+  <tr><th>본관</th><td><a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a> <a href="https://ko.wikipedia.org/wiki/강릉_유씨#분파">경력공파(經歷公派)</a></td></tr>
   <tr><th>종교</th><td><a href="https://ko.wikipedia.org/wiki/무종교">무종교</a> (<a href="https://ko.wikipedia.org/wiki/무신론">무신론</a>)</td></tr>
   <tr><th>군복무</th><td><a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 병장 만기전역</td></tr>
   <tr>
@@ -176,12 +176,10 @@
 
   <p style="margin-bottom:40px;"><strong>유종경</strong>(劉鍾景, <a href="https://ko.wikipedia.org/wiki/1990년">1990년</a> <a href="https://ko.wikipedia.org/wiki/11월_20일">11월 20일</a>~)은 <a href="https://ko.wikipedia.org/wiki/대한민국">대한민국</a> <a href="https://ko.wikipedia.org/wiki/강사">강사</a>, <a href="https://ko.wikipedia.org/wiki/크리에이터">크리에이터</a>이자 <a href="https://ko.wikipedia.org/wiki/평론가">평론가</a>이다. <a href="https://ko.wikipedia.org/wiki/세계">세계</a> 최초로 민주 시민으로서 <a href="https://ko.wikipedia.org/wiki/2023년">2023년</a> <a href="https://ko.wikipedia.org/wiki/2월">2월</a> 23일 대한민국 <a href="https://ko.wikipedia.org/wiki/광화문_광장">광화문 광장</a>에서 <a href="https://ko.wikipedia.org/wiki/국어사전">국어사전</a> <a href="https://ko.wikipedia.org/wiki/필사">필사</a> 운동을 인류 진보를 위해 선포했고 우리가 의미를 부여한 수단보다 사람이 가치가 낮은 환경이 세계 사회 문제 근원이라고 주장했다. 본관은 <a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a>이며 <a href="https://ko.wikipedia.org/wiki/서울">서울</a> 출생이다.</p>
 
-  <!-- 국어사전 필사운동 영상 (소개와 약력 사이에 넉넉한 여백) -->
   <div class="media-container">
     <iframe width="800" height="450" src="https://www.youtube.com/embed/WBu4euWSEQ4" title="국어사전 필사운동 선포" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
-  <!-- 약력 -->
   <div class="big-box">
     <h2>약력</h2>
     <ul>
@@ -193,6 +191,7 @@
       <li>2012년 <a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 공수 교육 189차 수료</li>
       <li>2018년 3월~2018년 7월 <a href="https://ko.wikipedia.org/wiki/맥도날드">맥도날드</a> <a href="https://ko.wikipedia.org/wiki/조합원">조합원</a></li>
       <li>2018년 2월~2023년 7월 <a href="https://ko.wikipedia.org/wiki/정의당">정의당</a></li>
+      <li>2025년 6월 17일 배움터지기 설립</a></li>
     </ul>
   </div>
 
@@ -218,19 +217,15 @@
     <li>2019. 「타다」, 대형 차량 운전기사</li>
     <li>2019. 「홈플러스」 문화센터 블록 놀이 강사</li>
     <li>2019. 「탑텐」, 의류점 상품 하역과 분류 업무</li>
-    <li>2019. 「웅진씽크빅」, 유아 지도교사와 초등학생 토론 지도교사</li>
-    <li>2019. 「스테디」, 아파트 커뮤니티센터 안내처 사원</li>
-    <li>2020. 「웅진씽크빅」, 유아 지도교사와 초등학생 토론 지도교사</li>
-    <li>2020. 「스테디」, 아파트 커뮤니티센터 안내처 사원</li>
-    <li>2020. 「웅진씽크빅」, 유아 지도교사와 초등학생 토론 지도교사</li>
+    <li>2019~2020. 「웅진씽크빅」, 유아 지도교사와 초등학생 토론 지도교사</li>
+    <li>2019~2022. 「스테디」, 아파트 커뮤니티센터 안내처 사원</li>
     <li>2021. 「웅진씽크빅」, 초등학생 토론 지도교사와 중학생 계획 지도교사</li>
-    <li>2021. 「스테디」, 아파트 커뮤니티센터 안내처 사원</li>
-    <li>2022. 「스테디」, 아파트 커뮤니티센터 안내처 사원</li>
     <li>2022. 「한솔교육」, 초등학생과 중학생 지도교사</li>
     <li>2023. 「삼성병원」, 환자이송요원</li>
     <li>2023. 실내 수영장 인명구조요원</li>
     <li>2024. 유아숲지도사 양성기관 연구원</li>
-    <li>2025. 「라라클래스」 역사 강사</li>
+    <li>2025. 서울 잠일초등학교 인공지능 강사</li>
+    <li>2025~ 「라라클래스」 역사 강사</li>
   </ul>
 
   <h2>공연</h2>
@@ -252,34 +247,22 @@
 <div class="gallery" style="text-align:center; margin:50px 0;">
   <div class="award-gallery">
 
-    <!-- 2007년 한국국제기아대책기구 표창장 -->
     <figure style="display:inline-block; margin:18px;">
-      <img src="표창장.jpg" 
-           alt="2007년 한국국제기아대책기구 표창장" 
-           width="300" loading="lazy"
-           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <img src="표창장.jpg" alt="2007년 한국국제기아대책기구 표창장" width="300" loading="lazy" style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
       <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
         2007년 한국국제기아대책기구 표창장
       </figcaption>
     </figure>
 
-    <!-- 2012년 민간인화재진압유공 -->
     <figure style="display:inline-block; margin:18px;">
-      <img src="민간인화재진압유공.jpg" 
-           alt="2012년 민간인화재진압유공" 
-           width="300" loading="lazy"
-           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <img src="민간인화재진압유공.jpg" alt="2012년 민간인화재진압유공" width="300" loading="lazy" style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
       <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
         2012년 민간인 화재진압 유공
       </figcaption>
     </figure>
 
-    <!-- 2023년 국립어린이청소년도서관 -->
     <figure style="display:inline-block; margin:18px;">
-      <img src="국립어린이청소년도서관 수상.jpg" 
-           alt="2023년 국립어린이청소년도서관 독서 캠페인 장려상" 
-           width="300" loading="lazy"
-           style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
+      <img src="국립어린이청소년도서관 수상.jpg" alt="2023년 국립어린이청소년도서관 독서 캠페인 장려상" width="300" loading="lazy" style="border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.18);">
       <figcaption style="margin-top:10px; font-size:0.95em; color:#555;">
         2023년 국립어린이청소년도서관 독서 캠페인 한 줄 슬로건 장려상
       </figcaption>
@@ -321,7 +304,6 @@
   </li>
 </ul>
 
-  <!-- 외부 링크 -->
   <h2>외부 링크</h2>
   <ul class="external-links">
     <li><a href="https://x.com/Yujongkyeong/">유종경 트위터</a></li>
