--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <li>2012년 <a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 공수 교육 189차 수료</li>
       <li>2018년 3월~2018년 7월 <a href="https://ko.wikipedia.org/wiki/맥도날드">맥도날드</a> <a href="https://ko.wikipedia.org/wiki/조합원">조합원</a></li>
       <li>2018년 2월~2023년 7월 <a href="https://ko.wikipedia.org/wiki/정의당">정의당</a></li>
-      <li>2025년 6월 17일 배움터지기 설립</a></li>
+      <li>2025년 6월 17일 <a href="https://youtube.com/channel/UCmh5FwHJJMYcgJSEz8NVPGw?si=PLkHLn_gS09Bwxhg" target="_blank">배움터지기 설립</a></li>
     </ul>
   </div>
 
