--- a/index.html
+++ b/index.html
@@ -132,11 +132,50 @@
 
   .clear { clear:both; }
 
+  /* ==================== 각주 툴팁 (티스토리에서 그대로 가져옴) ==================== */
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: help;
+  }
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 340px;
+    background-color: #2c2c2c;
+    color: #fff;
+    text-align: left;
+    border-radius: 8px;
+    padding: 14px;
+    position: absolute;
+    z-index: 10;
+    bottom: 130%;
+    left: 50%;
+    margin-left: -170px;
+    opacity: 0;
+    transition: opacity 0.25s;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.25);
+    font-size: 0.92em;
+    line-height: 1.45;
+    pointer-events: auto;
+  }
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -6px;
+    border-width: 6px;
+    border-style: solid;
+    border-color: #2c2c2c transparent transparent transparent;
+  }
+  .tooltip a { color:#4da6ff; text-decoration:underline; }
+
   @media (max-width: 768px) {
     body { padding:16px; font-size:1em; }
     .profile-img, .media-container iframe { width:100% !important; }
     .big-box { padding:16px; }
     h1 { font-size:1.9em; }
+    .tooltip .tooltiptext { width:280px; margin-left:-140px; }
   }
 </style>
 </head>
@@ -174,7 +213,7 @@
 
 <div class="content">
 
-  <p style="margin-bottom:40px;"><strong>유종경</strong>(劉鍾景, <a href="https://ko.wikipedia.org/wiki/1990년">1990년</a> <a href="https://ko.wikipedia.org/wiki/11월_20일">11월 20일</a>~)은 <a href="https://ko.wikipedia.org/wiki/대한민국">대한민국</a> <a href="https://ko.wikipedia.org/wiki/강사">강사</a>, <a href="https://ko.wikipedia.org/wiki/크리에이터">크리에이터</a>이자 <a href="https://ko.wikipedia.org/wiki/평론가">평론가</a>이다. <a href="https://ko.wikipedia.org/wiki/세계">세계</a> 최초로 민주 시민으로서 <a href="https://ko.wikipedia.org/wiki/2023년">2023년</a> <a href="https://ko.wikipedia.org/wiki/2월">2월</a> 23일 대한민국 <a href="https://ko.wikipedia.org/wiki/광화문_광장">광화문 광장</a>에서 <a href="https://ko.wikipedia.org/wiki/국어사전">국어사전</a> <a href="https://ko.wikipedia.org/wiki/필사">필사</a> 운동을 인류 진보를 위해 선포했고 우리가 의미를 부여한 수단보다 사람이 가치가 낮은 환경이 세계 사회 문제 근원이라고 주장했다. 본관은 <a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a>이며 <a href="https://ko.wikipedia.org/wiki/서울">서울</a> 출생이다.</p>
+  <p style="margin-bottom:40px;"><strong>유종경</strong>(劉鍾景, <a href="https://ko.wikipedia.org/wiki/1990년">1990년</a> <a href="https://ko.wikipedia.org/wiki/11월_20일">11월 20일</a>~)은 <a href="https://ko.wikipedia.org/wiki/대한민국">대한민국</a> <a href="https://ko.wikipedia.org/wiki/강사">강사</a>, <a href="https://ko.wikipedia.org/wiki/크리에이터">크리에이터</a>이자 <a href="https://ko.wikipedia.org/wiki/평론가">평론가</a>이다. <a href="https://ko.wikipedia.org/wiki/세계">세계</a> 최초로 민주 시민으로서 <a href="https://ko.wikipedia.org/wiki/2023년">2023년</a> <a href="https://ko.wikipedia.org/wiki/2월">2월</a> 23일 대한민국 <a href="https://ko.wikipedia.org/wiki/광화문_광장">광화문 광장</a>에서 <a href="https://ko.wikipedia.org/wiki/국어사전">국어사전</a> <a href="https://ko.wikipedia.org/wiki/필사">필사</a> 운동을 인류 진보를 위해 선포했고<sup class="tooltip">[1]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup> 우리가 의미를 부여한 수단보다 사람이 가치가 낮은 환경이 세계 사회 문제 근원이라고 주장했다. 본관은 <a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a>이며 <a href="https://ko.wikipedia.org/wiki/서울">서울</a> 출생이다.</p>
 
   <div class="media-container">
     <iframe width="800" height="450" src="https://www.youtube.com/embed/WBu4euWSEQ4" title="국어사전 필사운동 선포" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -191,6 +230,7 @@
       <li>2012년 <a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 공수 교육 189차 수료</li>
       <li>2018년 3월~2018년 7월 <a href="https://ko.wikipedia.org/wiki/맥도날드">맥도날드</a> <a href="https://ko.wikipedia.org/wiki/조합원">조합원</a></li>
       <li>2018년 2월~2023년 7월 <a href="https://ko.wikipedia.org/wiki/정의당">정의당</a></li>
+      <li>2023년 2월 23일 광화문 광장 국어사전 필사 운동 선포<sup class="tooltip">[1]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup></li>
       <li>2025년 6월 17일 <a href="https://youtube.com/channel/UCmh5FwHJJMYcgJSEz8NVPGw?si=PLkHLn_gS09Bwxhg" target="_blank">배움터지기 설립</a></li>
     </ul>
   </div>
@@ -237,12 +277,12 @@
     <li>2015. <a href="https://ko.wikipedia.org/wiki/햄릿">햄릿</a> (Hamlet)</li>
   </ul>
 
-<h2>수상</h2>
-<ul>
-  <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
-  <li>2012년 9월 4일 민간인화재진압유공</li>
-  <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려</li>
-</ul>
+  <h2>수상</h2>
+  <ul>
+    <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
+    <li>2012년 9월 4일 민간인화재진압유공</li>
+    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려<sup class="tooltip">[2]<span class="tooltiptext">독서 캠페인 한 줄 슬로건 장려<br><br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000" target="_blank">수상 내역 보기</a></span></sup></li>
+  </ul>
 
 <div class="gallery" style="text-align:center; margin:50px 0;">
   <div class="award-gallery">
@@ -304,6 +344,14 @@
   </li>
 </ul>
 
+  <h2>각주</h2>
+  <ol>
+    <li>[1] 세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br>
+    <a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1">https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1</a></li>
+    <li>[2] 독서 캠페인 한 줄 슬로건 장려<br>
+    <a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000">https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000</a></li>
+  </ol>
+
   <h2>외부 링크</h2>
   <ul class="external-links">
     <li><a href="https://x.com/Yujongkyeong/">유종경 트위터</a></li>
@@ -318,7 +366,7 @@
     <a href="https://ko.wikipedia.org/wiki/분류:1990년_출생">1990년 출생</a>
     <a href="https://ko.wikipedia.org/wiki/분류:살아있는_사람">살아있는 사람</a>
     <a href="https://ko.wikipedia.org/wiki/분류:강릉_유씨">강릉 유씨</a>
-        <a href="https://ko.wikipedia.org/wiki/분류:서일대학교_출신">서일대학교 출신</a>
+    <a href="https://ko.wikipedia.org/wiki/분류:서일대학교_출신">서일대학교 출신</a>
     <a href="https://ko.wikipedia.org/wiki/분류:인성초등학교_동문">인성초등학교 동문</a>
     <a href="https://ko.wikipedia.org/wiki/분류:인하대학교사범대학부속중학교_동문">인하대학교사범대학부속중학교 동문</a>
     <a href="https://ko.wikipedia.org/wiki/분류:학익고등학교_동문">학익고등학교 동문</a>
@@ -364,6 +412,33 @@
     <a href="https://yujongkyeong.github.io" style="background:#0969da; color:white; padding:10px 20px; border-radius:50px; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(9,105,218,0.3);">#평론가</a> 
   </div>
 </div>  
-  
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const tooltips = document.querySelectorAll('.tooltip');
+    tooltips.forEach(function(tooltip) {
+      const popup = tooltip.querySelector('.tooltiptext');
+      let hideTimeout;
+
+      function show() {
+        clearTimeout(hideTimeout);
+        popup.style.visibility = 'visible';
+        popup.style.opacity = '1';
+      }
+      function hide() {
+        hideTimeout = setTimeout(() => {
+          popup.style.visibility = 'hidden';
+          popup.style.opacity = '0';
+        }, 400);
+      }
+
+      tooltip.addEventListener('mouseenter', show);
+      tooltip.addEventListener('mouseleave', hide);
+      popup.addEventListener('mouseenter', show);
+      popup.addEventListener('mouseleave', hide);
+    });
+  });
+</script>
+
 </body>
 </html>
