--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <ul>
     <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
     <li>2012년 9월 4일 민간인화재진압유공</li>
-    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려<sup class="tooltip">[2]<span class="tooltiptext">독서 캠페인 한 줄 슬로건 장려<br><br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000" target="_blank">수상 내역 보기</a></span></sup></li>
+    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려<sup class="tooltip">[2]<span class="tooltiptext">독서 캠페인 한 줄 슬로건 장려<br><br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000" target="_blank">기사 보기</a></span></sup></li>
   </ul>
 
 <div class="gallery" style="text-align:center; margin:50px 0;">
