--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </tr>
   <tr><th>출생</th><td>1990년 11월 20일 (<span id="age">35</span>세)<br></td></tr>
   <tr><th>출생지</th><td>대한민국 <a href="https://ko.wikipedia.org/wiki/서울">서울</a></td></tr>
-  <tr><th>본관</th><td><a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a> <a href="https://ko.wikipedia.org/wiki/강릉_유씨#분파">경력공파(經歷公派)</a></td></tr>
+  <tr><th>본관</th><td><a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a> <a href="https://ko.wikipedia.org/wiki/강릉_유씨#분파">경력공파(經歷公派)</a><sup class="tooltip">[1]<span class="tooltiptext">경력공파 23세 종(鍾)○ 항렬.</span></sup></td></tr>
   <tr><th>종교</th><td><a href="https://ko.wikipedia.org/wiki/무종교">무종교</a> (<a href="https://ko.wikipedia.org/wiki/무신론">무신론</a>)</td></tr>
   <tr><th>군복무</th><td><a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 병장 만기전역</td></tr>
   <tr>
@@ -213,7 +213,7 @@
 
 <div class="content">
 
-  <p style="margin-bottom:40px;"><strong>유종경</strong>(劉鍾景, <a href="https://ko.wikipedia.org/wiki/1990년">1990년</a> <a href="https://ko.wikipedia.org/wiki/11월_20일">11월 20일</a>~)은 <a href="https://ko.wikipedia.org/wiki/대한민국">대한민국</a> <a href="https://ko.wikipedia.org/wiki/강사">강사</a>, <a href="https://ko.wikipedia.org/wiki/크리에이터">크리에이터</a>이자 <a href="https://ko.wikipedia.org/wiki/평론가">평론가</a>이다. <a href="https://ko.wikipedia.org/wiki/세계">세계</a> 최초로 민주 시민으로서 <a href="https://ko.wikipedia.org/wiki/2023년">2023년</a> <a href="https://ko.wikipedia.org/wiki/2월">2월</a> 23일 대한민국 <a href="https://ko.wikipedia.org/wiki/광화문_광장">광화문 광장</a>에서 <a href="https://ko.wikipedia.org/wiki/국어사전">국어사전</a> <a href="https://ko.wikipedia.org/wiki/필사">필사</a> 운동을 인류 진보를 위해 선포했고<sup class="tooltip">[1]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup> 우리가 의미를 부여한 수단보다 사람이 가치가 낮은 환경이 세계 사회 문제 근원이라고 주장했다. 본관은 <a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a>이며 <a href="https://ko.wikipedia.org/wiki/서울">서울</a> 출생이다.</p>
+  <p style="margin-bottom:40px;"><strong>유종경</strong>(劉鍾景, <a href="https://ko.wikipedia.org/wiki/1990년">1990년</a> <a href="https://ko.wikipedia.org/wiki/11월_20일">11월 20일</a>~)은 <a href="https://ko.wikipedia.org/wiki/대한민국">대한민국</a> <a href="https://ko.wikipedia.org/wiki/강사">강사</a>, <a href="https://ko.wikipedia.org/wiki/크리에이터">크리에이터</a>이자 <a href="https://ko.wikipedia.org/wiki/평론가">평론가</a>이다. <a href="https://ko.wikipedia.org/wiki/세계">세계</a> 최초로 민주 시민으로서 <a href="https://ko.wikipedia.org/wiki/2023년">2023년</a> <a href="https://ko.wikipedia.org/wiki/2월">2월</a> 23일 대한민국 <a href="https://ko.wikipedia.org/wiki/광화문_광장">광화문 광장</a>에서 <a href="https://ko.wikipedia.org/wiki/국어사전">국어사전</a> <a href="https://ko.wikipedia.org/wiki/필사">필사</a> 운동을 인류 진보를 위해 선포했고<sup class="tooltip">[2]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup> 우리가 의미를 부여한 수단보다 사람이 가치가 낮은 환경이 세계 사회 문제 근원이라고 주장했다. 본관은 <a href="https://ko.wikipedia.org/wiki/강릉_유씨">강릉 유씨(江陵 劉氏)</a>이며 <a href="https://ko.wikipedia.org/wiki/서울">서울</a> 출생이다.</p>
 
   <div class="media-container">
     <iframe width="800" height="450" src="https://www.youtube.com/embed/WBu4euWSEQ4" title="국어사전 필사운동 선포" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -230,7 +230,7 @@
       <li>2012년 <a href="https://ko.wikipedia.org/wiki/해병대">해병대</a> 공수 교육 189차 수료</li>
       <li>2018년 3월~2018년 7월 <a href="https://ko.wikipedia.org/wiki/맥도날드">맥도날드</a> <a href="https://ko.wikipedia.org/wiki/조합원">조합원</a></li>
       <li>2018년 2월~2023년 7월 <a href="https://ko.wikipedia.org/wiki/정의당">정의당</a></li>
-      <li>2023년 2월 23일 광화문 광장 국어사전 필사 운동 선포<sup class="tooltip">[1]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup></li>
+      <li>2023년 2월 23일 광화문 광장 국어사전 필사 운동 선포<sup class="tooltip">[2]<span class="tooltiptext">세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1" target="_blank">영상 보기</a></span></sup></li>
       <li>2025년 6월 17일 <a href="https://youtube.com/channel/UCmh5FwHJJMYcgJSEz8NVPGw?si=PLkHLn_gS09Bwxhg" target="_blank">배움터지기 설립</a></li>
     </ul>
   </div>
@@ -281,7 +281,7 @@
   <ul>
     <li>2007년 7월 24일 한국국제기아대책기구 표창장</li>
     <li>2012년 9월 4일 민간인화재진압유공</li>
-    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려<sup class="tooltip">[2]<span class="tooltiptext">독서 캠페인 한 줄 슬로건 장려<br><br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000" target="_blank">기사 보기</a></span></sup></li>
+    <li>2023년 5월 5일 독서 캠페인 한 줄 슬로건 장려<sup class="tooltip">[3]<span class="tooltiptext">독서 캠페인 한 줄 슬로건 장려<br><br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000" target="_blank">기사 보기</a></span></sup></li>
   </ul>
 
 <div class="gallery" style="text-align:center; margin:50px 0;">
@@ -346,9 +346,10 @@
 
   <h2>각주</h2>
   <ol>
-    <li>[1] 세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br>
+    <li>[1] 경력공파 23세 종(鍾)○ 항렬.</li>
+    <li>[2] 세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br>
     <a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1">https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1</a></li>
-    <li>[2] 독서 캠페인 한 줄 슬로건 장려<br>
+    <li>[3] 독서 캠페인 한 줄 슬로건 장려<br>
     <a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000">https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000</a></li>
   </ol>
 
