--- a/index.html
+++ b/index.html
@@ -344,14 +344,12 @@
   </li>
 </ul>
 
-  <h2>각주</h2>
-  <ol>
-    <li>[1] 경력공파 23세 종(鍾)○ 항렬.</li>
-    <li>[2] 세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br>
-    <a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1">https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1</a></li>
-    <li>[3] 독서 캠페인 한 줄 슬로건 장려<br>
-    <a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000">https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000</a></li>
-  </ol>
+<h2 data-ke-size="size26">각주</h2>
+<ol>
+  <li style="list-style-type:none;">[1] 경력공파 23세 종(鍾)○ 항렬.</li>
+  <li style="list-style-type:none;">[2] 세계 최초로 민주 시민으로서 2023년 2월 23일 대한민국 광화문 광장에서 국어사전 필사 운동을 인류 진보를 위해 선포했다.<br><a href="https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1">https://youtu.be/WBu4euWSEQ4?si=90voOwHgRsEBd-R1</a></li>
+  <li style="list-style-type:none;">[3] 독서 캠페인 한 줄 슬로건 장려<br><a href="https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000">https://www.nlcy.go.kr/NLCY/contents/C40601000000.do?schM=view&id=1119135&schBcid=nlcy_normal03#MMAP_C40601000000</a></li>
+</ol>
 
   <h2>외부 링크</h2>
   <ul class="external-links">
